Fixed alignment issues (who would have thought that'd happen in CSS)

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -193,3 +193,7 @@ body, html {
 .btn-google {
 	color: #d11718;
 }
+
+.img-responsive {
+    margin: 0 auto;
+}
